<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="25dp"
            android:orientation="vertical"
            android:paddingBottom="120dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_full_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/hint_input_full_name"
                app:counterEnabled="true"
                app:counterMaxLength="64"
                app:endIconMode="clear_text"
                app:helperTextTextColor="@color/red"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_email_address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/hint_input_email_address"
                app:counterEnabled="true"
                app:counterMaxLength="64"
                app:endIconMode="clear_text"
                app:helperTextTextColor="@color/red"
                app:layout_constraintTop_toBottomOf="@+id/il_full_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_mobile_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/hint_input_mobile_number"
                app:endIconMode="clear_text"
                app:helperTextTextColor="@color/red"
                app:layout_constraintTop_toBottomOf="@+id/il_email_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="12" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_date_of_birth"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/hint_input_date_of_birth"
                app:endIconMode="clear_text"
                app:helperTextTextColor="@color/red"
                app:layout_constraintEnd_toStartOf="@+id/il_age"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/il_mobile_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_date_of_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_age"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/hint_input_age"
                app:endIconMode="clear_text"
                app:helperTextTextColor="@color/red"
                app:layout_constraintTop_toBottomOf="@+id/il_date_of_birth">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_gender"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/hint_input_gender"
                app:endIconMode="clear_text"
                app:helperTextTextColor="@color/red"
                app:layout_constraintTop_toBottomOf="@+id/il_age">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/act_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="#B1B0B0"
                android:clickable="false"
                android:paddingVertical="15dp"
                android:text="@string/button_submit"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/il_gender" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>